# BenchLayer

./: .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml
src/: bench_functions.rs  lib.rs  utils.rs
src/bindings/: counter.rs
